--- a/sample_config.env
+++ b/sample_config.env
@@ -5,6 +5,10 @@ ___________PLOX_______REMOVE_____THIS_____LINE__________=True
 API_KEY = "YOUR API KEY"
 API_HASH = "YOUR API HASH"
 
+#Get these from BotFather
+BOT_TOKEN = ""
+BOT_USERNAME = ""
+
 # OpenWeather Map API Key for .weather command
 # Get from https://openweathermap.org/
 OPEN_WEATHER_MAP_APPID = ""
